--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -44,7 +44,7 @@ spec:
               port: 8080
           readinessProbe:
             httpGet:
-              path: /actuator/health
+              path: /actuator/health/readiness
               port: 8080
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
