--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -35,8 +35,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-#              containerPort: {{ .Values.service.port }}
-              containerPort: 8080
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
           livenessProbe:
             httpGet:
