--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -41,10 +41,14 @@ spec:
             httpGet:
               path: /actuator/health/liveness
               port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /actuator/health/readiness
               port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
